# python-constant

./: README.md  __init__.py  const.py  pyproject.toml  setup.py
